src/test/ui/parser/issue-62973.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62973.rs:8:2
   |
LL | fn p() { match s { v, E { [) {) }
   |        -         - unclosed delimiter
   |        |
   |        unclosed delimiter
LL | 
LL | 
   |  ^

error: aborting due to previous error

